HSEARCH-4784 Remove non-default envs from main build